refactor code to be more JPMS compatible